--- a/.gitignore
+++ b/.gitignore
@@ -2,40 +2,40 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-/**/.idea/workspace.xml
-/**/.idea/tasks.xml
+.idea/workspace.xml
+.idea/tasks.xml
 
 # Sensitive or high-churn files:
-/**/.idea/dataSources.ids
-/**/.idea/dataSources.xml
-/**/.idea/dataSources.local.xml
-/**/.idea/sqlDataSources.xml
-/**/.idea/dynamic.xml
-/**/.idea/uiDesigner.xml
+.idea/dataSources.ids
+.idea/dataSources.xml
+.idea/dataSources.local.xml
+.idea/sqlDataSources.xml
+.idea/dynamic.xml
+.idea/uiDesigner.xml
 
 # Gradle:
-/**/.idea/gradle.xml
-/**/.idea/libraries
+.idea/gradle.xml
+.idea/libraries
 
 # Mongo Explorer plugin:
-/**/.idea/mongoSettings.xml
+.idea/mongoSettings.xml
 
 ## File-based project format:
-/**/.iws
+.iws
 
 ## Plugin-specific files:
 
 # IntelliJ
-/**/out/
+out/
 
 # mpeltonen/sbt-idea plugin
-/**/.idea_modules/
+.idea_modules/
 
 # JIRA plugin
-/**/atlassian-ide-plugin.xml
+atlassian-ide-plugin.xml
 
 # Crashlytics plugin (for Android Studio and IntelliJ)
-/**/com_crashlytics_export_strings.xml
-/**/crashlytics.properties
-/**/crashlytics-build.properties
-/**/fabric.properties
+com_crashlytics_export_strings.xml
+crashlytics.properties
+crashlytics-build.properties
+fabric.properties
