--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,10 @@
-vendor/
-node_modules/
+## Files ignored by Git
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-bootstrap/cache/
-.env.*.php
-.env.php
-.env
-
-# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
-.rocketeer/
+# Laravel specifics
+ServerSide/node_modules
+ServerSide/public/storage
+ServerSide/vendor
+ServerSide/.idea
+ServerSide/Homestead.json
+ServerSide/Homestead.yaml
+ServerSide/.env
