--- a/SoCalledAdvancedLab/ProjectSuperMarket/ServerSide/composer.json
+++ b/SoCalledAdvancedLab/ProjectSuperMarket/ServerSide/composer.json
@@ -9,7 +9,8 @@
 		"barryvdh/laravel-ide-helper": "^2.3",
 		"laravel/framework": "5.4.*",
 		"laravel/tinker": "~1.0",
-		"leung/laravel-adminer": "^1.0"
+		"leung/laravel-adminer": "^1.0",
+		"zizaco/entrust": "^1.8"
 	},
 	"require-dev": {
 		"fzaninotto/faker": "~1.4",
